create the main structure of the page in HTML file

--- a/index.html
+++ b/index.html
@@ -22,11 +22,30 @@
 
 <body>
 
+  <!-- Creating a header to contain the start quiz content.-->
   <header>
+
+    <nav>
+      <a href="./index.html" draggable="false">View Highscores</a>
+    </nav>
+
+    <div>
+      <span class="timer">Time: 0</span>
+    </div>
+
+    <h1>
+      <span class="title">Coding Quiz Challenge</span>
+      <span class="subtitle">Try to answer the following code-related questions within the time limit. Keep in mind that
+        incorrect answers will penalize your score/time by ten seconds!</span>
+    </h1>
 
   </header>
 
   <main>
+
+    <div class="startContainer">
+      <button id="start">Start Quiz</button>
+    </div>
 
   </main>
 
