--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
   <!-- Creating a header to contain the start quiz content.-->
   <header>
 
-    <nav>
-      <a href="./index.html" draggable="false">View Highscores</a>
+    <nav id="scoreContainer">
+      <a href="./index.html" draggable="false" id="score">View Highscores</a>
     </nav>
 
-    <div>
+    <div id="timerContainer">
       <span class="timer">Time: 0</span>
     </div>
 
@@ -52,6 +52,7 @@
   <footer>
 
   </footer>
+
   <script src="./assets/JS/app.js"></script>
 </body>
 
