add a lable to user initials input

--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
       <p>Your final score is <span id="scoreSpan"></span>.</p>
 
       <div class="initialsContainer">
-        <input type="text" id="initialsInput" placeholder="Enter Initials">
+        <label for="initialsInput">Enter Initials:</label>
+        <input type="text" id="initialsInput" placeholder="ex. EA">
       </div>
 
       <div class="submitContainer">
