add attributes to user input section

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
       <div class="initialsContainer">
         <label for="initialsInput">Enter Initials:</label>
-        <input type="text" id="initialsInput" placeholder="ex. EA">
+        <input type="text" id="initialsInput" placeholder="ex. EA" autocomplete="on" autofocus required>
       </div>
 
       <div class="submitContainer">
